jest-output-2.txt
FAIL src/firebase.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\leotm\Desktop\Projetos\Programming\vacation-scheduler\src\firebase.js:10
    export { database } from './services/firebaseConfig';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 55 |[39m [36mconst[39m [33mMOCK_HASH[39m [33m=[39m [32m'ab'[39m[33m.[39mrepeat([35m32[39m)[33m;[39m [90m// what hashAdminToken returns with the mocked digest[39m
     [90m 56 |[39m
    [31m[1m>[22m[39m[90m 57 |[39m [36mconst[39m { createGroup[33m,[39m getGroup[33m,[39m validateAdminToken[33m,[39m addParticipant[33m,[39m updateParticipant[33m,[39m getParticipants[33m,[39m deleteGroup[33m,[39m deleteParticipant } [33m=[39m require([32m'./firebase'[39m)[33m;[39m
     [90m    |[39m                                                                                                                                           [31m[1m^[22m[39m
     [90m 58 |[39m
     [90m 59 |[39m beforeEach(() [33m=>[39m {
     [90m 60 |[39m   jest[33m.[39mclearAllMocks()[33m;[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/firebase.test.js:57:139)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.309 s
Ran all test suites matching /src\\firebase.test.js/i.
